# SEMKernels

./: .gitmodules  CMakeLists.txt  LICENCE.md  LICENCE_fr.md
.github/workflows/: ci-cpu.yaml
cmake/: CMakeBasics.cmake
src/: CMakeLists.txt
src/common/: compile_time_loops.hpp  macros.hpp  mathUtilites.hpp
src/discretization/finiteElement/: SEMQkGLBasisFunctions.hpp  SEMQkGLIntegrals.hpp
src/discretization/finiteElement/classic/: SEMQkGLBasisFunctionsClassic.hpp  SEMQkGLIntegralsClassic.hpp
src/discretization/finiteElement/geos/: LagrangeBasis1.hpp  LagrangeBasis2.hpp  LagrangeBasis4GL.hpp  SEMQkGLIntegralsGeos.hpp  tensorops.hpp
src/discretization/finiteElement/shiva/: SEMQkGLIntegralsShiva.hpp
src/finiteElement/: CMakeLists.txt  SEMQkGLBasisFunctions.hpp  SEMQkGLIntegrals.hpp  SEMQkGLIntegrals.hpp.in  SEMQkGLIntegralsClassic.hpp  SEMQkGLIntegralsOptim.hpp  SEMQkGLIntegralsShiva.hpp  SEMdata.hpp
src/finiteElement/classic/: SEMQkGLBasisFunctionsClassic.hpp  SEMQkGLIntegralsClassic.hpp
src/finiteElement/geos/: FiniteElementBase.hpp  LagrangeBasis1.hpp  LagrangeBasis2.hpp  LagrangeBasis3GL.hpp  LagrangeBasis4GL.hpp  LagrangeBasis5GL.hpp  Qk_Hexahedron_Lagrange_GaussLobatto.hpp  SEMQkGLBasisFunctionsGeos.hpp  SEMQkGLIntegralsGeos.hpp  tensorops.hpp
src/finiteElement/makutu/: LagrangeBasis1.hpp  LagrangeBasis2.hpp  LagrangeBasis3GL.hpp  LagrangeBasis4GL.hpp  LagrangeBasis5GL.hpp  Qk_Hexahedron_Lagrange_GaussLobatto.hpp  SEMQkGLIntegralsGeos.hpp  tensorops.hpp
src/finiteElement/optim/: SEMQkGLBasisFunctionsOptim.hpp  SEMQkGLIntegralsOptim.hpp
src/finiteElement/shiva/: SEMQkGLIntegralsShiva.hpp
src/finiteElement/tensorial/: LagrangeBasis1_Tensorial.hpp  LagrangeBasis2_Tensorial.hpp  LagrangeBasis3GL_Tensorial.hpp  LagrangeBasis4GL_Tensorial.hpp  LagrangeBasis5GL_Tensorial.hpp  Qk_Hexahedron_Tensorial.hpp
src/finiteElement/unitTests/: CMakeLists.txt  testSEMQkGLIntegrals.cpp  testSEMQkGLIntegralsShiva.cpp
src/solver/acoustic/: CMakeLists.txt
src/solver/acoustic/include/: SEMsolver.hpp
src/solver/acoustic/src/: SEMsolver.cpp
tests/: CMakeLists.txt
tests/finiteElement/: CMakeLists.txt
tests/finiteElement/makutu/: CMakeLists.txt  test_Qk_Hexahedron.cpp
